# mokuroku

./: .env.example  Makefile  README.md  manage.py  pyproject.toml  requirements.dev.txt  requirements.txt
accounts/: admin.py
accounts/migrations/: 0001_initial.py
lists/: admin.py  models.py  urls.py  views.py
lists/migrations/: 0001_initial.py  0002_rename_completed_task_checked_link_note.py
mokuroku/: asgi.py  settings.py  urls.py  wsgi.py
pages/: urls.py
templates/: _base.html
templates/lists/: lists.html
templates/pages/: home.html
